Fix vertical alignment.

--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,15 @@
 
 .input {
     background-color: bisque;
+    display: flex;
 }
 
 .output {
+    letter-spacing: .1rem;
+    line-height: 1.5em;
     display: flex;
     flex-direction: column;
     background-color: lightskyblue;
-    align-content: center;
 }
 
 @media screen and (min-width: 500px) {
