--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,5 +1,5 @@
 .header {
-    margin: 0 auto;
+    margin: auto;
     padding-top: 1em;
     text-align: center;
     order: 1;
