--- a/src/Components/Hint.css
+++ b/src/Components/Hint.css
@@ -1,5 +1,6 @@
 .hint {
     text-align: center;
+    margin: auto;
     order: 1;
     padding: 2em;
     color: brown;
