--- a/src/Components/NumButton.css
+++ b/src/Components/NumButton.css
@@ -4,10 +4,19 @@
     border-radius: 25%;
     background-color: silver;
     color: snow;
-    font-size: 1.5em;
+    font-size: 1.25em;
     margin: 1px 1px;
     width: var(--size);
     height: var(--size);
+}
+
+@media (min-width: 500px) {
+    .button {
+        --size: 2.5em;
+        width: var(--size);
+        height: var(--size);
+        font-size: 1.25em;
+    }
 }
 
 .clear {
