--- a/src/Components/NumPad.css
+++ b/src/Components/NumPad.css
@@ -1,11 +1,12 @@
 .display {
-    font-size: 2.5rem;
+    font-size: 3.25em;
     margin-bottom: 0.25em;
     text-align: center;
 }
 
 .numpad {
     width: 100%;
+    margin: auto;
 }
 
 .row {
